--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "jit": "npx postcss src/styles/tw-config.css -o src/styles/tw-output.css --watch"
   },
   "dependencies": {
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.14",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.18",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "eslint": "^8.36.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -25,6 +29,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "postcss-cli": "^10.1.0",
     "typescript": "^5.0.2"
   }
 }
