--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-svg": "^16.1.6",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
