--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-svg": "^16.1.6",
+    "remove": "^0.1.5",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.18",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "eslint": "^8.36.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
